--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,3 +3,8 @@
 </div>
 
 <label><input type="checkbox" [(ngModel)]="showfilebrowser"> Show filebrowser</label>
+<br />
+<h3>Git repository URL</h3>
+<input [(ngModel)]="gitrepositoryurl" style="width: 100%" />
+
+<button (click)="clone()">Clone</button>
