Git pull & push

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,3 +8,4 @@
 <input [(ngModel)]="gitrepositoryurl" style="width: 100%" />
 
 <button (click)="clone()">Clone</button>
+<button (click)="pullpush()">Pull and push</button>
