--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,4 +8,5 @@
 <input [(ngModel)]="gitrepositoryurl" style="width: 100%" />
 
 <button (click)="clone()">Clone</button>
-<button (click)="syncremote()">Sync remote changes</button>
+<button (click)="pull()">Pull remote changes</button>
+<button (click)="push()">Push local changes</button>
