--- a/src/lib/filebrowser.component.html
+++ b/src/lib/filebrowser.component.html
@@ -24,10 +24,10 @@
             <button mat-button (click)="goToParent(ndx)">{{dir}}</button>            
         </ng-container>
         <span style="flex-grow: 1"></span>
-        <button mat-icon-button (click)="createFolder()">
+        <button mat-icon-button (click)="createFolder()" matTooltip="New folder">
             <mat-icon>create_new_folder</mat-icon>
         </button>
-        <button mat-icon-button (click)="attachFilesClicked()" mdTooltip="Select a file from your computer and upload">
+        <button mat-icon-button (click)="attachFilesClicked()" matTooltip="Upload file">
             <mat-icon>file_upload</mat-icon>
         </button>
         <input #attachmentFileUploadInput type="file" [hidden]="true" multiple (change)="onFilesSelected($event)" />
@@ -68,7 +68,7 @@
                     </mat-list-item>
                 </ng-container>
                 <ng-container *ngIf="file!==renameFile">
-                    <mat-list-item *ngIf="file.isDir">
+                    <mat-list-item *ngIf="file.isDir && file.name!=='.' && file.name!=='..'">
                         <mat-icon mat-list-icon *ngIf="file.isDir">folder</mat-icon>
                         <a (click)="changedir(file)" mat-line>{{file.name}}</a> 
                         <span class="visibleOnHover">
@@ -77,6 +77,16 @@
                             </button>
                         </span>
                     </mat-list-item>
+
+                    <a mat-list-item
+                        (click)="changedir(file)" 
+                        *ngIf="
+                            file.isDir && file.name==='..'
+                            && (filebrowserservice.currentpath | async).length > 0
+                        "
+                        >
+                        <mat-icon mat-list-icon *ngIf="file.isDir">arrow_back</mat-icon>
+                    </a>
                     
                     <mat-list-item *ngIf="!file.isDir">
                         <a mat-line (click)="openFile(file)">{{file.name}}</a>
