Tests not failing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<h1>Angular filebrowser components</h1>
 <mat-card>
     <mat-card-content>
             
@@ -20,5 +21,11 @@
         <div style="height: 300px; border: red solid 1px">
             <app-filebrowser *ngIf="showfilebrowser"></app-filebrowser>
         </div>
+    </mat-card-content>
+</mat-card>
+<mat-card>
+    <mat-card-title>Single directory view component</mat-card-title>
+    <mat-card-content>    
+        <app-singlefolderview></app-singlefolderview>    
     </mat-card-content>
 </mat-card>
