Component for displaying and listening to changes in a single folder

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,6 +26,6 @@
 <mat-card>
     <mat-card-title>Single directory view component</mat-card-title>
     <mat-card-content>    
-        <app-singlefolderview></app-singlefolderview>    
+        <app-singlefolderview path="Testfolder"></app-singlefolderview>    
     </mat-card-content>
 </mat-card>
