--- a/src/lib/filebrowser.component.html
+++ b/src/lib/filebrowser.component.html
@@ -89,7 +89,7 @@
                     </a>
                     
                     <mat-list-item *ngIf="!file.isDir">
-                        <a mat-line (click)="openFile(file)">{{file.name}}</a>
+                        <a mat-line (click)="filebrowserservice.openFile(file)">{{file.name}}</a>
                         <span class="visibleOnHover">
                             <button mat-icon-button (click)="deleteFile(file)">
                                 <mat-icon>delete</mat-icon>
