--- a/src/lib/singlefolderview/singlefolderview.component.html
+++ b/src/lib/singlefolderview/singlefolderview.component.html
@@ -1,3 +1,3 @@
-<p>
-  singlefolderview works!
-</p>
+<ng-container *ngFor="let file of fileList | async">
+  <a mat-button (click)="filebrowserservice.openFile(file)">{{file.name}}</a>
+</ng-container>
