Added rmdir functionality

--- a/src/lib/filebrowser.component.html
+++ b/src/lib/filebrowser.component.html
@@ -75,6 +75,9 @@
                             <button mat-icon-button (click)="newFileName=file.name;renameFile=file">
                                 <mat-icon>edit</mat-icon>
                             </button>
+                            <button mat-icon-button (click)="deleteDir(file)">
+                                <mat-icon>delete</mat-icon>
+                            </button>
                         </span>
                     </mat-list-item>
 
