Emit events on changes in the filebrowser

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,6 +37,7 @@
             <app-filebrowser *ngIf="showfilebrowser" 
                 [fileInfoFilter]="hideFileIfStartingWithDotFilter"
                 [fileActionsHandler]="fileActionsHandler"
+                (fileschanges)="handleFilesChanges($event)"
                 >
             </app-filebrowser>
         </div>
