--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,6 +23,10 @@
             <mat-form-field style="margin-right: 5px">
                 <input matInput [(ngModel)]="email" placeholder="Email" (change)="updateGitUser()"/>                
             </mat-form-field>
+            <mat-form-field style="margin-right: 5px">
+                <input matInput [(ngModel)]="gitbackendservice.gitLFSAuthorizationHeaderValue"
+                placeholder="LFS authorization header value ('Basic '' + btoa('username:password'))"/>                
+            </mat-form-field>
         </div>
     </mat-card-content>
     <mat-card-actions>
