--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,96 +1,1 @@
-<h1>Angular filebrowser components</h1>
-<mat-card>
-    <mat-card-content>
-            
-        <mat-checkbox [(ngModel)]="showfilebrowser"> Show filebrowser</mat-checkbox>
-            
-        <div style="display: flex; flex-wrap: wrap; width: 100%">
-            <mat-form-field style="margin-right: 5px">
-                <input matInput [(ngModel)]="workdir" placeholder="Local workdir" />
-            </mat-form-field>
-            <mat-form-field style="width: 300px; margin-right: 5px">
-                <input matInput [(ngModel)]="gitrepositoryurl" placeholder="Git repository URL"  />
-            </mat-form-field>
-            <mat-form-field style="width: 300px; margin-right: 5px">
-                <input matInput [(ngModel)]="gitbackendservice.gitLFSEndpoint" placeholder="Git LFS endpoint URL" />
-            </mat-form-field>
-        </div>
-
-        <div style="display: flex; flex-wrap: wrap;  width: 100%">
-            <mat-form-field style="margin-right: 5px">
-                <input matInput [(ngModel)]="fullname" placeholder="Full name" (change)="updateGitUser()"/>                
-            </mat-form-field>        
-            <mat-form-field style="margin-right: 5px">
-                <input matInput [(ngModel)]="email" placeholder="Email" (change)="updateGitUser()"/>                
-            </mat-form-field>
-            <mat-form-field style="margin-right: 5px">
-                <input matInput [(ngModel)]="gitbackendservice.gitLFSAuthorizationHeaderValue"
-                placeholder="LFS authorization header value ('Basic '' + btoa('username:password'))"/>                
-            </mat-form-field>
-        </div>
-    </mat-card-content>
-    <mat-card-actions>
-        <button mat-raised-button (click)="clone()">Clone</button>
-        <button mat-raised-button (click)="pull()">Pull remote changes</button>
-        <button mat-raised-button (click)="push()">Push local changes</button>
-        <button mat-raised-button (click)="remount()">Remount workdir</button>
-    </mat-card-actions>
-</mat-card>
-<br />
-<mat-card>
-    <mat-card-title>The filebrowser component</mat-card-title>
-    <mat-card-content>
-        <mat-checkbox [(ngModel)]="gitbackendservice.convertUploadsToLFSPointer">Convert fileuploads to git LFS style pointers</mat-checkbox>
-        <div style="height: 300px; border: red solid 1px">
-            <app-filebrowser *ngIf="showfilebrowser" 
-                [fileInfoFilter]="hideFileIfStartingWithDotFilter"
-                [fileActionsHandler]="fileActionsHandler"
-                (fileschanges)="handleFilesChanges($event)"
-                >
-            </app-filebrowser>
-        </div>
-    </mat-card-content>
-</mat-card>
-<mat-card>
-    <mat-card-title>Single directory view component</mat-card-title>
-    <mat-card-content>    
-        <app-singlefolderview path="Testfolder"></app-singlefolderview>    
-    </mat-card-content>
-</mat-card>
-<mat-card>
-    <mat-card-title>Change log (git log)</mat-card-title>
-    <mat-card-content>
-        <button mat-raised-button (click)="refreshLog()">Refresh</button>
-        <table mat-table [dataSource]="log">
-            <ng-container matColumnDef="when">
-                <th mat-header-cell *matHeaderCellDef> Date/Time </th>
-                <td mat-cell *matCellDef="let entry"> {{entry.when * 1000 | date:'short'}} </td>
-            </ng-container>
-            <ng-container matColumnDef="name">
-                <th mat-header-cell *matHeaderCellDef> Name </th>
-                <td mat-cell *matCellDef="let entry"> {{entry.name}} </td>
-            </ng-container>
-            <ng-container matColumnDef="email">
-                <th mat-header-cell *matHeaderCellDef> Email </th>
-                <td mat-cell *matCellDef="let entry"> {{entry.email}} </td>
-            </ng-container>
-            <ng-container matColumnDef="message">
-                <th mat-header-cell *matHeaderCellDef> Message </th>
-                <td mat-cell *matCellDef="let entry"> {{entry.message}} </td>
-            </ng-container>
-            <ng-container matColumnDef="id">
-                <th mat-header-cell *matHeaderCellDef> Id </th>
-                <td mat-cell *matCellDef="let entry"> {{entry.id}} </td>
-            </ng-container>
-            <ng-container matColumnDef="parents">
-                <th mat-header-cell *matHeaderCellDef> Parents </th>
-                <td mat-cell *matCellDef="let entry"> {{entry.parents | json}} </td>
-            </ng-container>
-            <tr mat-header-row *matHeaderRowDef="displayedLogColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedLogColumns;"></tr>                
-            
-        </table>
-        <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
-
-    </mat-card-content>
-</mat-card>
+<router-outlet></router-outlet>
