Sort folder list, group folders from files

--- a/src/app/repository/repository.component.html
+++ b/src/app/repository/repository.component.html
@@ -6,9 +6,11 @@
                 Back
             </a>            
             <a mat-list-item routerLink="browse">
+                <mat-icon mat-list-icon>folder_open</mat-icon>
                 Browse
             </a>
             <a mat-list-item routerLink="log">
+                <mat-icon mat-list-icon>history</mat-icon>
                 Log
             </a>            
             <mat-list-item (click)="deleteLocal()">
