Single directory view component example

--- a/src/app/repository/repository.component.html
+++ b/src/app/repository/repository.component.html
@@ -13,6 +13,10 @@
                 <mat-icon mat-list-icon>history</mat-icon>
                 Log
             </a>            
+            <a mat-list-item routerLink="singledirectoryview">
+                <mat-icon mat-list-icon>folder</mat-icon>
+                Single folder view
+            </a>            
             <mat-list-item (click)="deleteLocal()">
                 <mat-icon mat-list-icon>delete_forever</mat-icon>
                 Delete
