--- a/src/app/repository/selectrepository.component.html
+++ b/src/app/repository/selectrepository.component.html
@@ -8,6 +8,12 @@
             <mat-form-field style="width: 300px; margin-right: 5px">
                 <input matInput [(ngModel)]="gitrepositoryurl" placeholder="Git repository URL"  />
             </mat-form-field>
+            <mat-form-field>
+                <input matInput [(ngModel)]="credentialsService.username" type="text" placeholder="Username" />                
+            </mat-form-field>
+            <mat-form-field>
+                <input matInput [(ngModel)]="credentialsService.password" type="password" placeholder="Password" />
+            </mat-form-field>
         </div>        
     </mat-card-content>
     <mat-card-actions>
