--- a/src/app/repository/repositorybrowser.component.html
+++ b/src/app/repository/repositorybrowser.component.html
@@ -1,5 +1,6 @@
 <mat-card>
-    <mat-card-content>            
+    <mat-card-content>       
+        <mat-checkbox [(ngModel)]="gitbackendservice.convertUploadsToLFSPointer">Use LFS for uploads</mat-checkbox>          
         <app-filebrowser 
             [fileInfoFilter]="hideFileIfStartingWithDotFilter"
             [fileActionsHandler]="fileActionsHandler"
